src/Login/Login.module.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;500;700&family=Outfit:wght@100;200;300;400;500;600;700;800;900&display=swap');

.logo_pos
{
padding: 70px;
}
.login_container
{
    display: flex; 
    flex-direction: row;
    width: 100%;
    max-width: 100%;
    justify-content: center;
}
.login_center
{
    max-width: 50%;
    width: 50%;
}
.login_left .login_right
{
    max-width: 25%;
    width: 25%;
}

.form_container
{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    width: 100%;
}



.welcome
{
    font-family: 'Outfit';
    font-style: bold;
    font-weight: 700;
    font-size: 64px;
    text-align: center;

}
.new_here
{
    font-family: 'Outfit';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 25px;
    text-align: center;

    color: #727272;
    margin: 25px 0 35px 0;
}
.createAccount
{
    color: #00FF66
}
.createAccount:hover {
    color: #01dd59
}

.btn_submit
{
    padding: 25px 75px;
}

